[metadata]
name = miaguila_lib
version = 0.0.2
author = Jed Horne
author_email = jed.horne@miaguila.com
description = Small tool for stats and log integration with Kinesis and New Relic
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MiAguila/miaguila_lib
project_urls =
    Bug Tracker = https://github.com/MiAguila/miaguila_lib/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
